--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reach/portal": "^0.16.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -10,9 +11,28 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-router": "^5.1.8",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/styled-components": "^5.1.14",
+    "axios": "^0.21.4",
+    "bootstrap": "^5.1.1",
+    "classnames": "^2.3.1",
+    "formik": "^2.1.5",
+    "history": "^5.0.0",
+    "moment": "^2.29.1",
+    "query-string": "^6.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
+    "react-query": "^3.12.1",
+    "react-router": "^6.0.0-beta.0",
+    "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.11.0",
+    "react-spring": "^8.0.27",
+    "react-toastify": "^8.0.2",
+    "styled-components": "^5.3.1",
+    "twin.macro": "^1.6.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
